; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_event_queue.c_pt_event_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/src/extr_pt_event_queue.c_pt_event_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_event = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.pt_event* (%struct.pt_event*)* @pt_event_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.pt_event* @pt_event_init(%struct.pt_event* %0) #0 {
  %2 = alloca %struct.pt_event*, align 8
  store %struct.pt_event* %0, %struct.pt_event** %2, align 8
  %3 = load %struct.pt_event*, %struct.pt_event** %2, align 8
  %4 = icmp ne %struct.pt_event* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load %struct.pt_event*, %struct.pt_event** %2, align 8
  %7 = call i32 @memset(%struct.pt_event* %6, i32 0, i32 4)
  br label %8

8:                                                ; preds = %5, %1
  %9 = load %struct.pt_event*, %struct.pt_event** %2, align 8
  ret %struct.pt_event* %9
}

declare dso_local i32 @memset(%struct.pt_event*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
